# multi-agent-literary-analysis-system

./: .gitignore  README.md  characters.sqlite  grad.code-workspace  main.py  pyproject.toml  test_metadata_remover.py
resources/character_data/: character_terms_arabic.csv
src/: configs.py  data_classes.py  graphs.py  llms.py  main.py  nodes.py  prompts.py  states.py  tempCodeRunnerFile.py  visualize_graph.py
src/databases/: database.py  test_database.py  test_database_integration.py
src/graphs/: graph_builders.py  graph_visualizers.py  nodes.py
src/graphs/nodes/: regular_nodes.py  router_nodes.py
src/language_models/: llms.py  prompts.py  tools.py
src/preprocessors/: __init__.py  metadata_remover.py  text_checkers.py  text_cleaners.py  text_splitters.py
src/schemas/: data_classes.py  output_structures.py  states.py
