[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "dotenv>=0.9.9",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langdetect>=1.0.9",
    "langgraph>=0.5.1",
    "langid>=1.1.6",
    "matplotlib>=3.10.3",
    "transformers>=4.53.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
