[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "dotenv>=0.9.9",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "matplotlib>=3.10.3",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
